llm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: text-generation-webui-nodeport
  namespace: llama
spec:
  type: NodePort
  selector:
    app: text-generation-webui
  ports:
    - port: 80
      targetPort: 7860
