llm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: text-generation-webui-ingress
  namespace: llama
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: chat.act.buaa.edu.cn
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: text-generation-webui-nodeport
            port:
              number: 80
  - tls:
    hosts:
    - chat.act.buaa.edu.cn
    secretName: tls-secret
